# simple_dbt_project

./: .gitignore  .gitkeep  .sqlfluff  .sqlfluffignore  .tool-versions  Makefile  README.md  check_orphans.py  dbt.duckdb  dbt_project.yml  docker-compose.yml  justfile  manifest_clean.json  packages.yml  profiles.yml  pyproject.toml  requirements.txt
Containers/: Dockerfile  requirements.txt
data/: state.csv
models/: exposures.yml
models/mart/: customer_orders.sql  schema.yml
models/marts/core/: core.yml  dim_customers.sql  fct_orders.sql
models/marts/marketing/: marketing.yml  order_status_pivot.sql
models/source/: schema.yml  src_customer.sql
models/staging/: schema.yml  src_eltool.yml  stg_customer.sql  stg_eltool.yml  stg_eltool__customers.sql  stg_eltool__orders.sql  stg_eltool__state.sql  stg_orders.sql  stg_state.sql
raw_data/: customer.csv  customer_new.csv  customers.csv  orders.csv  state.csv
sde_dbt_tutorial/: dbt_project.yml  packages.yml  profiles.yml
sde_dbt_tutorial/macros/: cents_to_dollars.sql  grant_select.sql
sde_dbt_tutorial/models/: all_dates.sql  exposures.yml  order_payment_method_amounts.sql
sde_dbt_tutorial/models/staging/: src_eltool.yml  stg_eltool.yml  stg_eltool__customers.sql  (+2 more)
sde_dbt_tutorial/prod-run-artifacts/: manifest.json
sde_dbt_tutorial/snapshots/: customers.sql
sde_dbt_tutorial/tests/: account_age.sql  assert_zipcode_has_5_digits.sql  zipcode_5_digits.sql
tests/: assert_customer_dimension_has_no_row_loss.sql
warehouse_setup/: 1_create_load_customer_order_state_table.sql  2_create_user.sql
(+7 files in other folders)
